# cpp_starter_template

./: .clang-tidy  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  main.cpp
